# rulefit

./: README.md  benchmark_tree_generators.py  environment.yml  pyproject.toml  test_algorithm_behavior.py  test_benchmark.py  test_predict.py
rulefit/: __init__.py  _conditions.py  _model.py  _ordered_set.py  _rules.py  _scaling.py  benchmark.py  rulefit.py
